[gd_scene load_steps=4 format=3 uid="uid://b6cnw4giy1shp"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_box.gd" id="1_aoihu"]
[ext_resource type="FontVariation" uid="uid://b3e6p50lhmld2" path="res://fonts/inter.tres" id="1_ya4v0"]
[ext_resource type="Script" path="res://scripts/ui/dialogue_player.gd" id="3_yj44i"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchor_left = 0.005
anchor_top = 0.696
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.4
offset_top = 0.319946
script = ExtResource("1_aoihu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.006
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.46

[node name="Columns" type="HBoxContainer" parent="Panel"]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 18.0
offset_right = -20.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(46, 0)

[node name="Name" type="Label" parent="Panel/Columns"]
texture_filter = 1
custom_minimum_size = Vector2(158, 43)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("1_ya4v0")
theme_override_font_sizes/font_size = 35
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="Panel/Columns"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Dialogue Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNext" type="Button" parent="Panel/Columns"]
custom_minimum_size = Vector2(136, 42)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ya4v0")
theme_override_font_sizes/font_size = 30
text = "Next"

[node name="ButtonFinish" type="Button" parent="Panel/Columns"]
visible = false
custom_minimum_size = Vector2(136, 42)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_ya4v0")
theme_override_font_sizes/font_size = 30
text = "Finish"

[node name="DialoguePlayer" type="Node" parent="."]
script = ExtResource("3_yj44i")

[connection signal="pressed" from="Panel/Columns/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="Panel/Columns/ButtonFinish" to="." method="_on_button_finish_pressed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_dialogue_player_finished"]
